<resources>
    <string name="app_name">Face mask</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
</resources>
